@@ -1,3 +1,7 @@
+2015-07-24  Kyle Agronick  <agronick@gmail.com>
+
+    Added users search box
+
 2015-07-14  Kyle Agronick  <agronick@gmail.com>
 
     Added settings and color picking
